# pup

./: .gitignore  AUTHORS  CMakeLists.txt  IDEAS.md  Makefile  Makefile.am  README.md  audit.h  bin.c  bin.h  chksum.h  configure.ac  csid.c  csid.h  main.c  pod.c  pod.h  restable.c  restable.h  tar.c  tar.h
doc/: history.txt
pod/: ccitt32.h  epd.c  pod2.c  pod2.h  pod3.h  pod6.h
src/: bin.c  bin.h  main.c  test.c
src/.deps/: bin.Po  main.Po  test.Po
src/chk/: ccitt32.c  crc_ccitt32.h
src/cmp/: c_libzip.c  c_libzip.h  comdec.c  comdec.h
src/cmp/.deps/: c_dat.Po  c_lzss.Po  c_pack2.Po  c_zlib.Po  comdec.Po
src/fmt/: dat.c  dat2.c  dpk4.c  epd.h  pack2.c  pod.c  pod.h  pod1.c  pod1.h  pod2.h  pod3.c  pod3.h  pod4.c  pod4.h  pod5.c  pod5.h  pod6.c  pod6.h  pod_common.h  res.c  restable.c  restable.h  wad23.c
src/fmt/.deps/: dat.Po  dat2.Po  dpk4.Po  gob.Po  grp.Po  labn.Po  meta.Po  pack.Po  pack2.Po  pak.Po  res.Po  restable.Po  rff.Po  viv.Po  vpp.Po  wad23.Po
